# StreamerAI

./: .env.example  .gitignore  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  setup.py  test.db  test_colors.py
StreamerAI/: settings.py
StreamerAI/data/: bootstrap.py  data.xlsx  excel.py
StreamerAI/data/bootstrap_data/assistants/: default.txt
StreamerAI/data/product_scripts/: 1.txt
StreamerAI/database/: __init__.py  database.py
StreamerAI/gpt/: chains.py  retrieval.py
StreamerAI/streamchat/: base.py  bili.py  fake.py  ratelimiter.py  streamChatHandler.py
StreamerAI/streamchat/douyin/: douyin.py  handler.py  message.proto  message_pb2.py
StreamerAI/streaming/: display_images.py  main.py  question_classifier.py  streamdisplay.py  tts.py  virtual_webcam.py
apis/: login.py
apis/chat/: chat.py
apis/chat/gpt/: chains.py  generate_data.py  generate_embeddings.py  prompt.py  retrieval.py  settings.py
apis/chat/gpt/data/: 1.txt  10.txt  11.txt  12.txt  13.txt  (+13 more)
data/: 19.txt  21.txt  generate_embeddings.py  prompt_template.txt
data/product_scripts/: 2.txt
scripts/: fetch_danmu.py  generate_data.py  parse-ppt.py  pres-old-data.json  retrieval_benchmark.py  send_message.py
src/apis/: chat.py
src/gpt/: chains.py  retrieval.py  scripts.py
src/gpt/product_scripts/: 0.txt  1.txt  2.txt
src/streaming/: database.py  fetch_danmu.py  main.py  question_classifier.py  settings.py  streamchat.py  streamchat_bili.py  streamchat_fake.py  tts.py
streaming/: comments_databse.py  main.py  requirements.txt  settings.py  streamchat.py  test.db
(+31 files in other folders)
