[tool.poetry]
name = "StreamerAI"
version = "0.1.0"
description = "ChatGPT powered AI Streamer"
authors = ["leo4life <leo.li@nyu.edu>", "michaeljxzhu", "lisangzhou"]
readme = "README.md"
packages = [{include = "StreamerAI"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.27.6"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
dataclasses-json = "0.5.7"
dnspython = "2.3.0"
et-xmlfile = "1.1.0"
frozenlist = "1.3.3"
greenlet = "2.0.2"
idna = "3.4"
langchain = "0.0.157"
loguru = "0.7.0"
marshmallow = "3.19.0"
marshmallow-enum = "1.5.1"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numexpr = "2.8.4"
numpy = "1.24.3"
openapi-schema-pydantic = "1.2.4"
openpyxl = "3.1.2"
packaging = "23.1"
pinecone-client = "2.2.1"
pydantic = "1.10.7"
pygame = "2.4.0"
python-dateutil = "2.8.2"
pyyaml = "6.0"
requests = "2.29.0"
six = "1.16.0"
sqlalchemy = "2.0.12"
tenacity = "8.2.2"
tqdm = "4.65.0"
typing-inspect = "0.8.0"
typing-extensions = "4.5.0"
urllib3 = "1.26.15"
yarl = "1.9.2"
bilibili-utils = "^0.2"
blivedm = "0.1.1"

[tool.poetry.scripts]
start = "StreamerAI.streaming.main:main"
bili = "StreamerAI.streamchat.bili:main"
fake = "StreamerAI.streamchat.fake:main"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"